; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_cond.tab.c_COND_GetLiteral.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_cond.tab.c_COND_GetLiteral.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cond_str = type { i32, i64 }

@.str = private unnamed_addr constant [16 x i8] c"Got literal %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64* (i32*, %struct.cond_str*)* @COND_GetLiteral to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64* @COND_GetLiteral(i32* %0, %struct.cond_str* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.cond_str*, align 8
  %5 = alloca i64*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.cond_str* %1, %struct.cond_str** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load %struct.cond_str*, %struct.cond_str** %4, align 8
  %8 = getelementptr inbounds %struct.cond_str, %struct.cond_str* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = sub nsw i32 %9, 1
  %11 = sext i32 %10 to i64
  %12 = mul i64 %11, 4
  %13 = trunc i64 %12 to i32
  %14 = call i64* @cond_alloc(i32* %6, i32 %13)
  store i64* %14, i64** %5, align 8
  %15 = load i64*, i64** %5, align 8
  %16 = icmp ne i64* %15, null
  br i1 %16, label %17, label %38

17:                                               ; preds = %2
  %18 = load i64*, i64** %5, align 8
  %19 = load %struct.cond_str*, %struct.cond_str** %4, align 8
  %20 = getelementptr inbounds %struct.cond_str, %struct.cond_str* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = add nsw i64 %21, 1
  %23 = load %struct.cond_str*, %struct.cond_str** %4, align 8
  %24 = getelementptr inbounds %struct.cond_str, %struct.cond_str* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = sub nsw i32 %25, 2
  %27 = sext i32 %26 to i64
  %28 = mul i64 %27, 4
  %29 = trunc i64 %28 to i32
  %30 = call i32 @memcpy(i64* %18, i64 %22, i32 %29)
  %31 = load i64*, i64** %5, align 8
  %32 = load %struct.cond_str*, %struct.cond_str** %4, align 8
  %33 = getelementptr inbounds %struct.cond_str, %struct.cond_str* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 8
  %35 = sub nsw i32 %34, 2
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds i64, i64* %31, i64 %36
  store i64 0, i64* %37, align 8
  br label %38

38:                                               ; preds = %17, %2
  %39 = load i64*, i64** %5, align 8
  %40 = call i32 @debugstr_w(i64* %39)
  %41 = call i32 @TRACE(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %40)
  %42 = load i64*, i64** %5, align 8
  ret i64* %42
}

declare dso_local i64* @cond_alloc(i32*, i32) #1

declare dso_local i32 @memcpy(i64*, i64, i32) #1

declare dso_local i32 @TRACE(i8*, i32) #1

declare dso_local i32 @debugstr_w(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
